<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:background="@drawable/fon4"
        android:layout_height="wrap_content">



        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar">
        </include>

        <Button
            android:id="@+id/buttonstartbanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/knopka"
            android:layout_marginBottom="8dp"
            android:text="Смотреть рекламу"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#090738"
            android:textSize="50dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonstartbanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.592"
            tools:ignore="MissingConstraints" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-6015294152911442/9802056338"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberofviews"
            android:textColor="@color/purple"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/framelayout" >


    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        app:headerLayout="@layout/header"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/purple"
        app:itemIconTint="@color/purple"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start"/>




</androidx.drawerlayout.widget.DrawerLayout>